WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103170
[EFL] Layout test comes to crash on WK1
https://bugs.webkit.org/show_bug.cgi?id=103170
Summary
[EFL] Layout test comes to crash on WK1
Gyuyoung Kim
Reported
2012-11-23 22:46:39 PST
(gdb) bt #0 0x00007fffe9dd5cc0 in xcb_glx_get_string_string_length () from /usr/lib/x86_64-linux-gnu/libxcb-glx.so.0 #1 0x00007ffff22ae4e4 in ?? () from /usr/lib/x86_64-linux-gnu/mesa/libGL.so.1 #2 0x00007ffff22abf4c in ?? () from /usr/lib/x86_64-linux-gnu/mesa/libGL.so.1 #3 0x00007fffa5cf3254 in eng_window_new (disp=<optimized out>, win=71303171, screen=0, vis=0x6c0340, cmap=71303170, depth=<optimized out>, w=800, h=600, indirect=0, alpha=0, rot=0) at evas_x_main.c:329 #4 0x00007fffa5cefb0a in eng_setup (e=0x6ef190, in=0x695bc0) at evas_engine.c:1000 #5 0x00007ffff3e56fca in evas_engine_info_set (e=0x6ef190, info=<optimized out>) at evas_main.c:316 #6 0x00007ffff48585fa in _ecore_evas_x_gl_window_new (parent=178, x=0, y=0, w=800, h=600, override=0, argb=0, opt=0x0, ee=<optimized out>) at ecore_evas_x.c:252 #7 0x00007ffff4859934 in ecore_evas_gl_x11_options_new (disp_name=0x0, parent=178, x=0, y=0, w=800, h=600, opt=0x0) at ecore_evas_x.c:3564 #8 0x00007ffff4859b01 in ecore_evas_gl_x11_new (disp_name=<optimized out>, parent=<optimized out>, x=<optimized out>, y=<optimized out>, w=<optimized out>, h=<optimized out>) at ecore_evas_x.c:3488 #9 0x00007ffff4850aec in _ecore_evas_constructor_opengl_x11 (x=0, y=0, w=800, h=600, extra_options=<optimized out>) at ecore_evas.c:472 #10 0x0000000000426941 in main ()
Attachments
Patch
(1.55 KB, patch)
2012-11-24 09:29 PST
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2012-11-23 23:14:39 PST
This layout test crash occurred from below,
http://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release/builds/7830
Gyuyoung Kim
Comment 2
2012-11-24 02:10:34 PST
Crash tests are skipped for now.
http://trac.webkit.org/changeset/135645
Viatcheslav Ostapenko
Comment 3
2012-11-24 09:29:11 PST
Created
attachment 175859
[details]
Patch
Viatcheslav Ostapenko
Comment 4
2012-11-24 09:42:21 PST
(In reply to
comment #3
)
> Created an attachment (id=175859) [details] > Patch
Disabling AC should fix this crash: 21:53:59.538 6087 1 0x7fda4cafe068 21:53:59.538 6087 2 0x7fda48a38cb0 21:53:59.538 6087 3 0x7fda4a065b28 21:53:59.538 6087 4 0x7fda4b69a764 WebCore::RenderLayerCompositor::attachRootLayer(WebCore::RenderLayerCompositor::RootLayerAttachment) 21:53:59.538 6087 5 0x7fda4b69b39c WebCore::RenderLayerCompositor::ensureRootLayer() 21:53:59.538 6087 6 0x7fda4b69b6f5 WebCore::RenderLayerCompositor::enableCompositingMode(bool) 21:53:59.538 6087 7 0x7fda4b69cc1d WebCore::RenderLayerCompositor::updateBacking(WebCore::RenderLayer*, WebCore::RenderLayerCompositor::CompositingChangeRepaint) 21:53:59.538 6087 8 0x7fda4b69cd26 WebCore::RenderLayerCompositor::updateLayerCompositingState(WebCore::RenderLayer*, WebCore::RenderLayerCompositor::CompositingChangeRepaint) 21:53:59.538 6087 9 0x7fda4b6877e2 WebCore::RenderLayer::styleChanged(WebCore::StyleDifference, WebCore::RenderStyle const*) 21:53:59.538 6087 10 0x7fda4b6a0670 WebCore::RenderLayerModelObject::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 21:53:59.538 6087 11 0x7fda4b62b321 WebCore::RenderBox::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 21:53:59.538 6087 12 0x7fda4b5e9ba9 WebCore::RenderBlock::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 21:53:59.538 6087 13 0x7fda4b6c9482 WebCore::RenderObject::setStyle(WTF::PassRefPtr<WebCore::RenderStyle>) 21:53:59.538 6087 14 0x7fda4b6c7600 WebCore::RenderObject::setAnimatableStyle(WTF::PassRefPtr<WebCore::RenderStyle>) 21:53:59.538 6087 15 0x7fda4b06138e WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 21:53:59.538 6087 16 0x7fda4b0614dc WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 21:53:59.538 6087 17 0x7fda4b0614dc WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 21:53:59.538 6087 18 0x7fda4b0614dc WebCore::Element::recalcStyle(WebCore::Node::StyleChange) 21:53:59.538 6087 19 0x7fda4b03d36b WebCore::Document::recalcStyle(WebCore::Node::StyleChange) 21:53:59.538 6087 20 0x7fda4b03d83e WebCore::Document::updateStyleIfNeeded() 21:53:59.538 6087 21 0x7fda4b4a6d7a WebCore::AnimationControllerPrivate::updateAnimations(WebCore::SetChanged) 21:53:59.538 6087 22 0x7fda4b4a6f8e WebCore::AnimationControllerPrivate::updateAnimationTimer(WebCore::SetChanged) 21:53:59.539 6087 23 0x7fda4b4a75df WebCore::AnimationControllerPrivate::animationTimerFired(WebCore::Timer<WebCore::AnimationControllerPrivate>*) 21:53:59.539 6087 24 0x7fda4b4f69fa WebCore::ThreadTimers::sharedTimerFiredInternal() 21:53:59.539 6087 25 0x7fda4be377dd 21:53:59.539 6087 26 0x7fda49ad533e _ecore_timer_expired_call 21:53:59.539 6087 27 0x7fda49ad550b _ecore_timer_expired_timers_call 21:53:59.539 6087 28 0x7fda49ad2421 21:53:59.539 6087 29 0x7fda49ad2ab7 ecore_main_loop_begin 21:53:59.539 6087 30 0x4315db 21:53:59.539 6087 31 0x43268c It happens because direct rendering to host window is not implemented in EFL GraphicsContext3D after
r135468
:
https://bugs.webkit.org/show_bug.cgi?id=103179
Compositing/animation tests should stay skipped because they will fail if AC is switched off.
WebKit Review Bot
Comment 5
2012-11-24 18:38:53 PST
Comment on
attachment 175859
[details]
Patch Clearing flags on attachment: 175859 Committed
r135662
: <
http://trac.webkit.org/changeset/135662
>
WebKit Review Bot
Comment 6
2012-11-24 18:38:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug