[EFL] Layout test comes to crash on WK1 https://bugs.webkit.org/show_bug.cgi?id=103170

Patch by Viatcheslav Ostapenko <v.ostapenko@samsung.com> on 2012-11-24
Reviewed by Kenneth Rohde Christiansen.

Switch off accelerated compositing for WK1 because GraphicsContext3D is
missing direct rendering implementation that is required for EFL WK1.

* ewk/ewk_view.cpp:
(_ewk_view_priv_new):

Canonical link: https://commits.webkit.org/121322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135662 268f45cc-cd09-0410-ab3c-d52691b4dbfc