Source/WebKit/efl/ewk/ewk_view.cpp
@@ -837,6 +837,9 @@ static Ewk_View_Private_Data* _ewk_view_priv_new(Ewk_View_Smart_Data* smartData)
     priv->pageSettings->setFullScreenEnabled(true);
 #endif
     priv->pageSettings->setInteractiveFormValidationEnabled(true);
+#if USE(ACCELERATED_COMPOSITING)
+    priv->pageSettings->setAcceleratedCompositingEnabled(false);
+#endif
 
     url = priv->pageSettings->userStyleSheetLocation();
     priv->settings.userStylesheet = eina_stringshare_add(url.string().utf8().data());
